<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWorkouts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="start_workout">Start Workout</string>
    <string name="new_workout">New Workout</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="title_activity_new_workout">New Workout</string>
    <string name="title">Title</string>
    <string name="exercises">Exercises</string>
    <string name="new_exercise">New Exercise</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="save">Save</string>
    <string name="save_workout">Save workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">kg</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_add_exercise">New Exercise</string>
    <string name="title_activity_start_workout">Start Workout</string>
    <string name="select_workout">Select Workout</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="time">Time:</string>
    <string name="title_activity_edit_set">Edit</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="finished_workouts">Finished Workouts</string>
    <string name="title_activity_workout_statistics">workoutStatisticsActivity</string>
    <string name="end_workout">End Workout</string>
    <string name="end_workout_question">Are you sure you want to end workout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="about_message">Created by Audrius Bartkus</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="date">Date</string>
    <string-array name="languages">
        <item>Select language</item>
        <item>Lietuvių</item>
        <item>English</item>
    </string-array>
</resources>
