<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/window">

    <TextView
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:id="@+id/textView"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_unit"
        android:id="@+id/dateTextView"
        android:layout_toEndOf="@+id/editText"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/editText" />

    <TextView
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textSize="24dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/button" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:onClick="save"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text=" "
        android:singleLine="false" />

</RelativeLayout>