<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:configChanges="keyboardHidden|orientation"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.audrius.myworkouts.myworkouts.activities.newWorkoutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="24sp"
        android:textColor="#3f51b5"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_input"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ff4081"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:id="@+id/exercises"
        android:layout_below="@+id/title_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textColor="#3f51b5"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_exercise"
        android:id="@+id/startPauseButton"
        android:onClick="addExercise"
        android:layout_below="@+id/exercises"
        android:layout_centerHorizontal="true"
        style="@style/customButton"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/list"
        tools:listitem="list_example_entry"
        android:layout_below="@+id/startPauseButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/save_workout"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_workout"
        android:id="@+id/save_workout"
        android:onClick="save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/customButton"/>

</RelativeLayout>
